circular avatar view

--- a/app/src/main/res/layout/spinner_item_persons.xml
+++ b/app/src/main/res/layout/spinner_item_persons.xml
@@ -7,7 +7,8 @@
     <cz.pikadorama.uome.common.view.AvatarView
         android:id="@+id/avatar"
         android:layout_width="48dp"
-        android:layout_height="48dp"/>
+        android:layout_height="48dp"
+        android:padding="4dp"/>
 
     <TextView
         android:id="@+id/nameTextView"
