--- a/app/src/main/res/layout/avatar_view.xml
+++ b/app/src/main/res/layout/avatar_view.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/avatarImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/content_description_avatar"
         android:scaleType="centerCrop"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        app:civ_border_width="0dp"/>
 
     <TextView
         android:id="@+id/avatarText"
