--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,7 @@
 
     <dimen name="fab_margin">0dp</dimen>
     <dimen name="fab_list_bottom_padding">88dp</dimen>
+    
+    <dimen name="widget_padding">8dp</dimen>
 
 </resources>
