reformatted all source according to updated rules

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,8 +18,12 @@
             android:title="@string/pref_debt_age"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_category_other">
-        <Preference android:key="backup" android:title="@string/title_backup" />
-        <Preference android:key="export" android:title="@string/title_export" />
+        <Preference
+            android:key="backup"
+            android:title="@string/title_backup"/>
+        <Preference
+            android:key="export"
+            android:title="@string/title_export"/>
         <PreferenceScreen android:title="@string/pref_about">
             <intent
                 android:action="android.intent.action.VIEW"
