--- a/app/src/main/res/values-v21/dimens.xml
+++ b/app/src/main/res/values-v21/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="floating_button_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
